--- a/food/templates/food/index.html
+++ b/food/templates/food/index.html
@@ -1,42 +1,26 @@
-{% load static %}
+{% extends 'food/base.html' %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'food/style.css' %}">
     <title>Django Project</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    
 </head>
 <body>
 
-
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark" >
-        <div class="container-fluid ">
-            <a href="#" class="navbar-brand">FoodAPP</a>
-            <div class="collapse navbar-collapse justify-content-end">
-                <ul class="navbar-nav mb-2 mb-lg-0" >
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Add Item</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Delete Item</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">View Item</a>
-                    </li> 
-                </ul>
-            </div>
-        </div>
-    </nav>
-
+    {% block body %}
+    
 
     {% for item in item_list %}
-        <ul>
-            <li>
-                <a href="{% url 'food:detail' item.id %}">{{ item.id }} -- {{ item.item_name }}</a>
-            </li>
-        </ul>
+    <ul>
+        <li>
+            <a href="{% url 'food:detail' item.id %}">{{ item.id }} -- {{ item.item_name }}</a>
+        </li>
+    </ul>
     {% endfor %}
+
+    {% endblock %}
 </body>
 </html>
