Agregamos una imagen y mostramos info

--- a/food/templates/food/detail.html
+++ b/food/templates/food/detail.html
@@ -4,6 +4,9 @@
 <h1>{{ item.item_name }}</h1>
 <h2>{{ item.item_desc }}</h2>
 <h3>Price: ${{ item.item_price }}</h3>
+<div>
+    <img src={{ item.item_image }} alt={{ item.item_name }} />
+</div>
 
 <a href="/food/">Return</a>
 
