--- a/food/templates/food/detail.html
+++ b/food/templates/food/detail.html
@@ -1,11 +1,17 @@
 {% extends 'food/base.html' %}
 
 {% block body %}
-<h1>{{ item.item_name }}</h1>
-<h2>{{ item.item_desc }}</h2>
-<h3>Price: ${{ item.item_price }}</h3>
-<div>
-    <img src={{ item.item_image }} alt={{ item.item_name }} />
+<div class="container">
+    <div class="row text-center">
+        <div class="col-md-6 align-self-center">
+            <img class="card" height="400px" width="400px" src={{ item.item_image }} alt={{ item.item_name }} />
+        </div>
+        <div class="col-md-6">
+            <h1>{{ item.item_name }}</h1>
+            <h2>{{ item.item_desc }}</h2>
+            <h3>Price: ${{ item.item_price }}</h3>
+        </div>
+    </div>
 </div>
 
 <a href="/food/">Return</a>
